kubernetes/apps/uxi/nats/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nats
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nats
      app.kubernetes.io/instance: nats
      app.kubernetes.io/component: nats
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              uxi.homelab/nats-access: "true"
      ports:
        - protocol: TCP
          port: 4222
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: nats
              app.kubernetes.io/instance: nats
              app.kubernetes.io/component: nats
      ports:
        - protocol: TCP
          port: 6222
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - protocol: TCP
          port: 8222
        - protocol: TCP
          port: 7777
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: nats
              app.kubernetes.io/instance: nats
              app.kubernetes.io/component: nats
      ports:
        - protocol: TCP
          port: 6222
